# openaibox

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.fr.md  README.md  openaibox_deploy_colab.py  pyproject.toml
.github/workflows/: release.yml
docs/: understanding_results.fr.md  understanding_results.md
openaibox/: __init__.py  analyzer.py  discovery.py  mapping.py  reporter.py
openaibox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: publish_pypi.sh  release.sh
tests/: test_smollm_analysis.py
tests/results/: README.md  smollm_graph.json
