[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "openaibox"
version         = "1.0.0b1"
description     = "Universal LLM introspection. Understand any model. Any architecture."
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.8"
authors         = [{name = "Daouda Abdoul Anzize", email = "anzize.contact@proton.me"}]

keywords = [
    "llm", "transformers", "introspection", "interpretability",
    "pytorch", "huggingface", "neural-network", "open-ai-box"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]

[project.urls]
Homepage   = "https://github.com/tryboy869/openaibox"
Repository = "https://github.com/tryboy869/openaibox"
Issues     = "https://github.com/tryboy869/openaibox/issues"

[tool.setuptools.packages.find]
include = ["openaibox*"]
